--- a/app/src/main/res/layout/fragment_time_list.xml
+++ b/app/src/main/res/layout/fragment_time_list.xml
@@ -6,16 +6,24 @@
     android:layout_height="match_parent"
     android:background="@color/translucent_gray">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/time_list_date_textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="12dp"
+            android:textStyle="bold"/>
 
         <android.support.v7.widget.CardView
+            style="@style/MyCardViewStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:background="@android:color/holo_orange_light"
-            style="@style/MyCardViewStyle">
+            android:background="@android:color/holo_orange_light">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/time_list_recyclerView"
@@ -26,14 +34,14 @@
             <TextView
                 android:id="@+id/empty_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:background="@android:color/holo_blue_bright"
-                android:text="No TimeSlots found."/>
+                android:gravity="center"
+                android:text="@string/empty_list_time_slots"/>
 
         </android.support.v7.widget.CardView>
 
-    </FrameLayout>
+    </LinearLayout>
 
 
 </ScrollView>
