--- a/app/src/main/res/layout/list_item_day.xml
+++ b/app/src/main/res/layout/list_item_day.xml
@@ -7,6 +7,8 @@
     android:layout_gravity="center">
 
     <TextView
+        android:id="@+id/day_list_item_date_textView"
+        android:background="@drawable/list_item_rectangle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
