--- a/app/src/main/res/menu/fragment_time_list.xml
+++ b/app/src/main/res/menu/fragment_time_list.xml
@@ -1,3 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/menu_item_delete_day"
+        android:title="@string/menu_delete_day"
+        app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/menu_item_reset_day"
+        android:title="@string/menu_reset_day"
+        app:showAsAction="never"/>
 </menu>
