--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
     </style>
 
     <style name="MyCardViewStyle" parent="CardView">
+        <item name="android:layout_margin">8dp</item>
         <item name="cardUseCompatPadding">true</item>
         <item name="cardCornerRadius">4dp</item>
     </style>
