--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_height="2dp"
         android:background="@color/light_gray"/>
 
-    <com.practice.android.primetime.NoSwipeViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/no_swipe_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
