--- a/app/src/main/res/layout/fragment_time_list.xml
+++ b/app/src/main/res/layout/fragment_time_list.xml
@@ -1,4 +1,4 @@
-<ScrollView
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView"
@@ -44,5 +44,5 @@
     </LinearLayout>
 
 
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
 
