--- a/app/src/main/res/layout/list_item_time_slot2.xml
+++ b/app/src/main/res/layout/list_item_time_slot2.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         style="@style/ListItemStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -21,21 +21,35 @@
             android:gravity="center"
             tools:text="8 AM"/>
 
-        <TextView
-            android:id="@+id/list_item_activity_textView"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:gravity="center"
-            android:textStyle="bold"
-            tools:text="Sample Activity"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/list_item_activity_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:text="Sample Activity"/>
+
+            <TextView
+                android:id="@+id/list_item_subactivity_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Subactivity"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/list_item_energy_textView"
             android:layout_width="60dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawableRight="@drawable/ic_energy"
             android:gravity="center"
             tools:text="8"/>
@@ -43,7 +57,7 @@
         <TextView
             android:id="@+id/list_item_procrastination_textView"
             android:layout_width="60dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:drawableEnd="@drawable/ic_procrastination_clock"
             android:gravity="center"
             tools:text="15"/>
