--- a/app/src/main/res/layout/sample_fragment.xml
+++ b/app/src/main/res/layout/sample_fragment.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <TextView
-        android:text="Hello World"
-        android:gravity="center"
-        android:textSize="30sp"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/textView"/>
-</LinearLayout>
+        android:text="Hello World"
+        android:textSize="30sp"/>
+</ScrollView>
